add_library(
    ladr STATIC
    ac_redun.c
    accanon.c
    attrib.c
    avltree.c
    backdemod.c
    banner.c
    basic.c
    btm.c
    btu.c
    clash.c
    clause_eval.c
    clause_misc.c
    clauseid.c
    clauses.c
    clausify.c
    clist.c
    clock.c
    cnf.c
    complex.c
    compress.c
    definitions.c
    demod.c
    di_tree.c
    dioph.c
    discrim.c
    discrimb.c
    discrimw.c
    dollar.c
    fastparse.c
    fatal.c
    features.c
    flatdemod.c
    flatterm.c
    formula.c
    fpa.c
    fpalist.c
    glist.c
    hash.c
    hints.c
    ibuffer.c
    int_code.c
    interp.c
    ioutil.c
    ivy.c
    just.c
    lindex.c
    listterm.c
    literals.c
    maximal.c
    memory.c
    mindex.c
    multiset.c
    nonport.c
    options.c
    order.c
    paramod.c
    parautil.c
    parse.c
    pindex.c
    random.c
    resolve.c
    std_options.c
    strbuf.c
    string.c
    subsume.c
    symbols.c
    term.c
    termflag.c
    termorder.c
    test.c
    tlist.c
    top_input.c
    topform.c
    tptp_trans.c
    unify.c
    weight.c
    weight2.c
    xproofs.c
)
